Adjust ImageInfo monkey-patch to be compatible with Docker API 1.52
https://docs.docker.com/reference/api/engine/version-history/#v152-api-changes

Can't actually replicate this on GHA with Docker 29.0.1, despite it failing on RHEL with this same image, so not sure what the difference is here.